# fake-news

./: README.md  docker-compose.yaml
fake-news-api/: Dockerfile  main.py  pyproject.toml  requirements.txt
fake-news-api/api/: models.py  routes.py  service.py  store.py
fake-news-ui/: Dockerfile  package.json  pnpm-lock.yaml
fake-news-ui/src/: App.tsx
fake-news-ui/src/components/: HistoryList.tsx  InputForm.tsx  ResultCard.tsx
